--- a/src/optimization-with-pulp/02-a-blending-problem-full.ipynb
+++ b/src/optimization-with-pulp/02-a-blending-problem-full.ipynb
@@ -99,10 +99,20 @@
    "execution_count": 4,
    "id": "bde06bbe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'CHICKEN': Ingr_CHICKEN, 'BEEF': Ingr_BEEF, 'MUTTON': Ingr_MUTTON, 'RICE': Ingr_RICE, 'WHEAT': Ingr_WHEAT, 'GEL': Ingr_GEL}\n"
+     ]
+    }
+   ],
    "source": [
     "# A dictionary called 'ingredient_vars' is created to contain the referenced Variables\n",
-    "ingredient_vars = pl.LpVariable.dicts(\"Ingr\", Ingredients, 0)"
+    "# https://coin-or.github.io/pulp/technical/pulp.html?highlight=lpvariable#pulp.LpVariable\n",
+    "ingredient_vars = pl.LpVariable.dicts(\"Ingr\", Ingredients, 0)\n",
+    "print(ingredient_vars)"
    ]
   },
   {
@@ -110,13 +120,23 @@
    "execution_count": 5,
    "id": "08c55d0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.008*Ingr_BEEF + 0.013*Ingr_CHICKEN + 0.001*Ingr_GEL + 0.01*Ingr_MUTTON + 0.002*Ingr_RICE + 0.005*Ingr_WHEAT\n"
+     ]
+    }
+   ],
    "source": [
     "# The objective function is added to 'prob' first\n",
+    "objective_function = pl.lpSum([costs[i] * ingredient_vars[i] for i in Ingredients])\n",
     "prob += (\n",
-    "    pl.lpSum([costs[i] * ingredient_vars[i] for i in Ingredients]),\n",
+    "    objective_function,\n",
     "    \"Total Cost of Ingredients per can\",\n",
-    ")"
+    ")\n",
+    "print(objective_function)"
    ]
   },
   {
